--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
+<h1>Let's play Battle</h1>
+
 <form action="/names" method="post">
 Player1<input type="text" name="player1"><br>
 Player2<input type="text" name="player2"><br>
