--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,5 @@
-<h1>"Hi <%=@player1%>, you are Player 1</h1>
-<h1>"Hi <%=@player2%>, you are Player 2</h1>
+<h1>"Hi <%=$player1%>, you are Player 1</h1>
+<h1>"Hi <%=$player2%>, you are Player 2</h1>
 
 <form action="/attack" method="post">
 <input type="submit" name="reduce" value="Attack">
