Players can switch turn

--- a/views/play.erb
+++ b/views/play.erb
@@ -5,3 +5,5 @@
 <input type="submit" name="reduce" value="Attack">
 </form>
 <h2>Player 2 has <%=@p2points%> points</h2>
+
+<h2>"<%=$game.current_turn.name%> is making a move"</h2>
