--- a/views/play.erb
+++ b/views/play.erb
@@ -4,6 +4,8 @@
 <form action="/attack" method="post">
 <input type="submit" name="reduce" value="Attack">
 </form>
-<h2>Player 2 has <%=@p2points%> points</h2>
+
+<h2>Player 1 has <%=$game.player1.points%> points</h2>
+<h2>Player 2 has <%=$game.player2.points%> points</h2>
 
 <h2>"<%=$game.current_turn.name%> is making a move"</h2>
